fixed column sizing on small to medium sized screens

--- a/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
+++ b/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
@@ -406,7 +406,7 @@ $gutter: 20px;
   }
   /*Grid styles*/
   .Grid-item {
-    width: 48%;
+    width: 98%;
   }
 }
 @media all and (min-width: 592px) {
